# smart-agenda

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml  setup.py  test.md
src/smart_agenda/: cli.py  cli_output.py  lib.py  util.py
src/smart_agenda/options/: __init__.py  recent.py
tests/: test_agenda.py  test_agenda_parser.py  test_cli.py  test_util.py
